# Splendor-AI

./: .buildinfo  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  LICENSE  MANIFEST.in  Makefile  README.md  agents.html  developing_agents.html  development.html  environment.yaml  features.py  generate_docs.html  genindex.html  index.html  installation.html  modules.html  mypy.ini  objects.inv  py-modindex.html  pyproject.toml  requirements.txt  run_splendor.html  search.html  searchindex.js  setup.py  splendor.Splendor.gym.envs.html  splendor.Splendor.gym.html  splendor.Splendor.html  splendor.agents.generic.html  splendor.agents.html  splendor.agents.our_agents.genetic_algorithm.html  splendor.agents.our_agents.html  splendor.agents.our_agents.ppo.html  splendor.agents.our_agents.ppo.ppo_rnn.gru.html  splendor.agents.our_agents.ppo.ppo_rnn.html  splendor.agents.our_agents.ppo.ppo_rnn.lstm.html  splendor.agents.our_agents.ppo.self_attn.html  (+4 more)
.doctrees/: agents.doctree  developing_agents.doctree  development.doctree  environment.pickle  generate_docs.doctree  index.doctree  installation.doctree  modules.doctree  run_splendor.doctree  splendor.Splendor.doctree  splendor.Splendor.gym.doctree  splendor.Splendor.gym.envs.doctree  splendor.agents.doctree  splendor.agents.generic.doctree  splendor.agents.our_agents.doctree  splendor.agents.our_agents.genetic_algorithm.doctree  splendor.agents.our_agents.ppo.doctree  splendor.agents.our_agents.ppo.ppo_rnn.doctree  splendor.agents.our_agents.ppo.ppo_rnn.gru.doctree  splendor.agents.our_agents.ppo.ppo_rnn.lstm.doctree  splendor.agents.our_agents.ppo.self_attn.doctree  splendor.doctree  splendor.splendor.doctree  splendor.splendor.gym.doctree  splendor.splendor.gym.envs.doctree
.github/workflows/: docs.yaml
Engine/: game.py  general_game_runner.py  template.py
Engine/Splendor/: features.py  splendor_displayer.py  splendor_model.py
Engine/agents/Splendor/our_agents/: minmax.py  ppo.py
Engine/agents/generic/: first_move.py  minmax.py  random.py  timeout.py
GreedyIsGood/: README.md  buy_weightage.txt  collect_feature.txt  collect_weightage.txt  featureTest.txt  game.py  python  reserve_feature.txt  reserve_weightage.txt  splendor_runner.py  utils.py  weightage.txt
GreedyIsGood/Splendor/: splendor.md  splendor_displayer.py  splendor_model.py
GreedyIsGood/agents/Depo/: Q_learning_own_new5.py  myTeam.py
GreedyIsGood/agents/first_prelim/: myTeam_astarr.py
GreedyIsGood/agents/greedisgood/: myTeam.py
GreedyIsGood/replays/: replay.replay  replay2.replay
GreedyIsGood/wiki-template/: AI-Method-1.md  AI-Method-2.md  Conclusions-and-Reflections.md  Design-Choices.md  Evolution.md  Home.md  _Sidebar.md
Splendid/: game.py  splendor_runner.py
Splendid/Splendor/: splendor_displayer.py  splendor_model.py  splendor_utils.py
Splendid/agents/Splendid/: bfsAgent.py  myTeam.py  myTeam2.py  noHeuristic.py  reward.py  test.py
Splendid/agents/generic/: example_bfs.py  first_move.py  random.py
_modules/: index.html
_modules/splendor/: game.html  general_game_runner.html  template.html  utils.html  version.html
_modules/splendor/Splendor/: features.html  splendor_displayer.html  splendor_model.html  splendor_utils.html  types.html  utils.html
_modules/splendor/Splendor/gym/envs/: actions.html  splendor_env.html  utils.html
_modules/splendor/agents/generic/: first_move.html  random.html  timeout.html
_modules/splendor/agents/our_agents/: minmax.html
_modules/splendor/agents/our_agents/genetic_algorithm/: argument_parsing.html  evolve.html  genes.html  genetic_algorithm_agent.html
_modules/splendor/agents/our_agents/ppo/: arguments_parsing.html  common.html  input_norm.html  network.html  ppo.html  ppo_agent.html  ppo_agent_base.html  ppo_base.html  rollout.html  training.html  utils.html
_modules/splendor/splendor/: features.html  splendor_displayer.html  splendor_model.html  splendor_utils.html  types.html  utils.html
_modules/splendor/splendor/gym/envs/: actions.html  splendor_env.html  utils.html
_sources/: developing_agents.rst.txt  development.rst.txt  index.rst.txt  run_splendor.rst.txt  splendor.Splendor.gym.rst.txt  splendor.agents.generic.rst.txt  splendor.agents.our_agents.ppo.ppo_rnn.lstm.rst.txt  splendor.agents.our_agents.ppo.ppo_rnn.rst.txt  splendor.agents.our_agents.ppo.rst.txt  splendor.rst.txt  splendor.splendor.gym.envs.rst.txt  splendor.splendor.gym.rst.txt  splendor.splendor.rst.txt
docs/: Makefile
docs/source/: agents.rst  conf.py  developing_agents.rst  development.rst  generate_docs.rst  index.rst  installation.rst  modules.rst  run_splendor.rst  splendor.Splendor.gym.envs.rst  splendor.Splendor.rst  splendor.agents.our_agents.genetic_algorithm.rst  splendor.agents.our_agents.ppo.ppo_rnn.gru.rst  splendor.agents.our_agents.ppo.rst  splendor.agents.our_agents.ppo.self_attn.rst  splendor.agents.our_agents.rst  splendor.agents.rst  splendor.rst
genetic_algorithm/: evolve.py  genes.py  genetic_algorithem_agent.py
requirements/: development.txt  docs.txt  extra.txt  runtime.txt
src/Engine/: __init__.py  game.py  general_game_runner.py  template.py
src/Engine/Splendor/: constants.py  features.py  splendor_displayer.py  splendor_model.py  utils.py
src/Engine/Splendor/gym/envs/: actions.py  splendor_env.py  utils.py
src/Engine/agents/generic/: first_move.py  random.py  timeout.py
src/Engine/agents/our_agents/: minmax.py
src/Engine/agents/our_agents/genetic_algorithm/: evolve.py  genes.py  genetic_algorithem_agent.py  manager.npy  (+4 more)
src/splendor/: game.py  general_game_runner.py  template.py  utils.py  version.py
src/splendor/Splendor/: constants.py  features.py  splendor_displayer.py  splendor_model.py  splendor_utils.py  types.py  utils.py
src/splendor/Splendor/gym/: __init__.py
src/splendor/agents/generic/: first_move.py  random.py  timeout.py
src/splendor/agents/our_agents/: minmax.py
src/splendor/splendor/: constants.py  features.py  splendor_displayer.py  splendor_model.py  splendor_utils.py  types.py  utils.py
src/splendor/splendor/gym/: __init__.py
(+54 files in other folders)
